--- a/package.json
+++ b/package.json
@@ -10,9 +10,12 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@serialport/list": "^12.0.0",
+    "@serialport/parser-readline": "^12.0.0",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
-    "nodemon": "^3.1.3"
+    "nodemon": "^3.1.3",
+    "serialport": "^12.0.0"
   }
 }
