--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@prisma/client": "^5.15.0",
     "@serialport/list": "^12.0.0",
     "@serialport/parser-readline": "^12.0.0",
     "cors": "^2.8.5",
@@ -18,5 +19,8 @@
     "express": "^4.19.2",
     "nodemon": "^3.1.3",
     "serialport": "^12.0.0"
+  },
+  "devDependencies": {
+    "prisma": "^5.15.0"
   }
 }
